gitignore application.yml.erb

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .DS_Store
 *.swp
 /cookbooks/figaro/templates/default/
+/cookbooks/figaro/files/default/application.yml.erb
+/cookbooks/figaro/files/
